--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./style/style.css" />
+    <script src="./scripts/script.js"></script>
   </head>
   <body>
     <section class="main">
@@ -558,6 +559,6 @@
       </div>
     </footer>
 
-    <script src="./scripts/script.js"></script>
+    <!-- <script src="./scripts/script.js"></script> -->
   </body>
 </html>
